src/components/skills/index.scss
.skills {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding-bottom: 1em;
  margin-bottom: 1em;
  max-width: 100vw;
  > h1 {
    color: #6b17e6;
  }

  &__slider {
    max-height: 80%;
    max-width: 90%;
    justify-content: center;
    align-items: center;
    .skill_name {
      display: inline-block;
      > img {
        width: 4em;
        margin-bottom: 1em;
      }
    }
  }
}
@media only screen and (min-width: 700px) {
  .skills {
    .technologies {
      display: inline-flex;
      width: 100%;
      &__core,
      &__other {
        display: flex;
        flex-direction: column;
        width: 50%;
        justify-content: center;
        align-items: center;

        > ul {
          padding: 0;
          list-style: square;
          > li {
            margin: 1em;
          }
          > h2 {
            padding: 0;
          }
        }
      }
      &__core {
        border-right: 0.1em solid #6b17e6;
      }
    }
  }
}

@media only screen and (max-width: 699px) {
  .technologies {
    &__core,
    &__other {
      > ul {
        list-style: none;
        text-align: center;
        > h2 {
          color: #c1a3ee;
        }
        > li {
          display: block;
        }
      }
    }
  }
}

